# cerebro-en-las-nubes

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARQUITECTURA_SISTEMA.md  AUDITORIA_ARQUITECTONICA.md  CHANGELOG.md  COMPARATIVA_BASEROW.md  DAYS_16_17_COMPLETION_REPORT.md  DAYS_16_17_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.v2  GUIA_IMPLEMENTACION_MEJORAS.md  GUIA_PERSONAL_AIRTABLE.md  GUIA_TECNICA_AIRTABLE.md  INFORME_TECNICO_REAL.md  INTEGRATION_TESTING_GUIDE.md  INTEGRATION_TESTING_PREP_COMPLETE.md  LEEME_PRIMERO.md  NOTEBOOKLM_CONTEXT_APP.md  PLAN_CONTINUACION.md  PROJECT-STATUS.md  README.md  README_SECURITY_FIRST.md  REPORTE_SECRETS_MCP.md  RESULTADOS_TESTING_PRODUCTION.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_P1.md  SECURITY_MIGRATION.md  START_INTEGRATION_TESTING.md  TWILIO_INTEGRATION_STATUS.md  WAITLIST-IMPLEMENTATION.md  assistant.json  bypass_uploader_nb1.py  bypass_uploader_nb2.py  bypass_uploader_nb3.py  bypass_uploader_nb4.py  bypass_uploader_nb5.py  bypass_uploader_nb6.py  (+45 more)
.claude/: settings.local.json
.sisyphus/: boulder.json
DATOS RESTOBAR EN LAS NUBES/: ARQUITECTURA_COMPLETA_RESTOBAR.md  CASOS_USO_RESTOBAR.md  FAQS_RESTOBAR.md  base_conocimiento_faqs.md  carta, enlas nubes.txt
android-app/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
dashboard/: .env.example  Dockerfile  Dockerfile.static  README.md  index.html  nginx.conf  package.json  tailwind.config.js  ts_errors.txt  vite.config.ts  vitest.config.ts
docs/: ALGORITMO_ASIGNACION_MESAS.md  ARQUITECTURA_MEMORIA_MESAS.md  (+27 more)
(+342 files in other folders)
